--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "framer-motion": "^4.1.18-rc.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-outside-click-handler": "^1.3.0",
