--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^4.1.18-rc.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.4",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
